tests/type_safety/enum_non_exhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `ChatRole::System` and `ChatRole::Tool` not covered
  --> tests/type_safety/enum_non_exhaustive_match.rs:11:11
   |
11 |     match role {
   |           ^^^^ patterns `ChatRole::System` and `ChatRole::Tool` not covered
   |
note: `ChatRole` defined here
  --> src/types/chat.rs
   |
   | pub enum ChatRole {
   | ^^^^^^^^^^^^^^^^^
...
   |     System,
   |     ------ not covered
   |     Tool,
   |     ---- not covered
   = note: the matched value is of type `ChatRole`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
13 ~         ChatRole::Assistant => "assistant response",
14 ~         ChatRole::System | ChatRole::Tool => todo!(),
   |
